--- a/(1.0)intro5.md
+++ b/(1.0)intro5.md
@@ -7,10 +7,15 @@
 Join our discord server😊
 
 
-## Computer program
+## Computer program🕙
 
+A computer program is a sequence of instructions in a programming language that a computer can execute or interpret.
 
+### Our first line of code in JavaScript in the browser:
+The console.log() method outputs a message to the web console. The message may be a single string (with optional substitution values), or it may be any one or more JavaScript objects.
+```console.log('hello world')```
 
+https://developer.mozilla.org/en-US/docs/Web/API/console/log
 ## Installing Git 🕙
 
 Git is a version control system that we'll use to save changes and deploy our app. We need to install Git!
@@ -35,7 +40,6 @@ rm
 mkdir
 
 rmdir, rm -r folder_name
-
 
 ## Visual Studio Code 
 
@@ -75,11 +79,6 @@ Any website, such as google.ca etc, which can be access by our browsers such as 
 
 _NOTE: Full Stack developer: Someone who is familiar with both kinds of development, and can work on a website from start to finish!_
 
-### Our first line of code in JavaScript in the browser:🕙
-The console.log() method outputs a message to the web console. The message may be a single string (with optional substitution values), or it may be any one or more JavaScript objects.
-```console.log('hello world')```
-
-https://developer.mozilla.org/en-US/docs/Web/API/console/log
 
 ## Next, Let's learn more about the internet
 
