--- a/(2.1)Install_node1-2.md
+++ b/(2.1)Install_node1-2.md
@@ -57,11 +57,11 @@ console.log("Congrats!!!, you just ran some JS code");
 - It was created by [Ryan Dahl](https://wikipedia.org/wiki/Node.js) in 2009
 - We'll use Node.js from now on to learn the language and run our JavaScript exercises
 - Once we know the language core concepts we'll learn about the Browsers API's
-- [Download & install Node.js](https://nodejs.org/en/download/)
+- [Download & install Node.js](https://nodejs.org/en/download/)🕙
 - [Install Node.js & npm Windows](http://blog.teamtreehouse.com/install-node-js-npm-windows)
 
 
-## install nvm - the node versions on windows (suggested way to run node)🕙
+## ℹ️Alternative way: install nvm - the node versions on windows (good to know, if you have time you could uninstall node and try this way)
 https://github.com/coreybutler/nvm-windows/releases/download/1.1.9/nvm-setup.zip
 
 ```bash
