--- a/(5.0)JavaScript_part_d5-6.md
+++ b/(5.0)JavaScript_part_d5-6.md
@@ -2,6 +2,7 @@
 
 [<- Home](README.md)
 
+Getting harder now!👷‍♂️🪨
 ## Comparison operators
 
 ### Equality operators 🕙
@@ -122,7 +123,7 @@
 
 [Exercise 35](./exercises/js/ex_35.md)
 
-## Logical Operators 🕙
+## Logical Operators 🕙🕙
 
 - Logical operators are typically used with Boolean (logical) values
 - When they are, they return a **Boolean** value
@@ -184,7 +185,7 @@
 - In this case we get **false** as both expressions are false
 - [MDN logical operators doc](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_Operators)
 
-## Negation 🕙
+## Negation 🕙🕙
 
 - Using the not operator **!** we can negate a condition
 - If we have a **true** value and we use the not operator we get **false**
@@ -257,5 +258,5 @@
 
 #### Practice
 
-- Open a browser console and try all the examples to see the output
+- Open a browser console or node repl and try all the examples to see the output
 
