--- a/(2.0)How_js_works2.md
+++ b/(2.0)How_js_works2.md
@@ -1,5 +1,4 @@
-# How does JS work in our first site
-
+# How does JS work in a web page
 [<- Home](README.md)
 
 Follow the next steps to create your first site! These steps are fast pace but follow them and know that __we will review every component of this tutorial__ throughout the course.
@@ -26,12 +25,12 @@ Follow the next steps to create your first site! These steps are fast pace but f
 <html lang="en">
 <head>
   <title>My First Site</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div>
-    <h1>Hello World!!!</h1>
+    <h1>Hello World!</h1>
     <p>Now let's conquer the world!!</p>
     <button>Click Me</button>
   </div>
