--- a/(17.0)Browserapi.md
+++ b/(17.0)Browserapi.md
@@ -2,15 +2,15 @@
 
 [<- Home](README.md)
 
-# http-server
+# live-server
 
-- **http-server** is a simple, zero-configuration command-line http server
+- **live-server** is a simple, zero-configuration command-line http server
 - It is powerful enough for production usage, but it's simple and hackable enough to be used for testing, local development, and learning
-- We're going to install http-server locally
+- We're going to install live-server locally
 - If you have Node.js installed execute the following command from your terminal
 
   ```bash
-  npm install http-server -g
+  npm install live-server -g
   ```
 
 - We create an HTML file like always
@@ -42,7 +42,7 @@
 - If you opened the folder VSC already knows that we're using this path
 - Type:
   ```bash
-  http-server
+  live-server
   ```
 - A new web server will start
 - This server will serve the folder files
@@ -59,8 +59,8 @@
 
   ![image](resources/images/browser/8.png)
 
-- Using http-server we have a local server running and we are able to simulate a real site
-- From now on use http-server or similar to create your sites
+- Using live-server we have a local server running and we are able to simulate a real site
+- From now on use live-server or similar to create your sites
 - If you need to stop the server just press `CTRL + C`
 - You can open the terminal using the following shortcut
 
@@ -68,7 +68,7 @@
   Ctrl+`
   ```
 
-- [http-server site](https://www.npmjs.com/package/http-server)
+- [live-server site](https://www.npmjs.com/package/live-server)
 - [VSC keyboard shortcuts Windows](https://code.visualstudio.com/shortcuts/keyboard-shortcuts-windows.pdf)
 - [VSC keyboard shortcuts Mac](https://code.visualstudio.com/shortcuts/keyboard-shortcuts-macos.pdf)
 
