--- a/(19.0)API using express.md
+++ b/(19.0)API using express.md
@@ -8,7 +8,7 @@
 - And configure our statics assets
 - Also, we can create templates using Pug and render them from Express server using the render method
 - It's time to put everything in action
-- You can donwload the project code from the [github repo]()
+- You can download the project code from the [github repo]()
 - First lets create a node-site-example folder and change directory into it
 
   ```bash
@@ -648,14 +648,10 @@
   });
   ```
 
-- It's so good to see how our project keeps on groing and that we can add more features to it
+- It's so good to see how our project keeps on growing and that we can add more features to it
 - I'm sure that you're thinking about how to upload a picture
 - To support this we need to refactor our code to use [multer](https://github.com/expressjs/multer) instead of body-parser
 - Install multer as dependency
   ```
   npm i multer
   ```
-
-## Let's Checkout MongoDB
-
-- [<- Node.js](nodejs.md) - [MongoDB ->](mongodb.md)
