--- a/(2.2)JavaScript_data_type_a2.md
+++ b/(2.2)JavaScript_data_type_a2.md
@@ -45,7 +45,7 @@ node index.js
 
 ### Conclusion
 
-- Browser and Node.js internaly use the V8 JavaScript engine to run JavaScript code
+- Browser and Node.js internally use the V8 JavaScript engine to run JavaScript code
 - We can use the Browser or Node.js console to try out JavaScript code
 - V8 is maintained by Google
 - We'll use browser to run JavaScript client side and Node.js for Server side
