--- a/(2.0)Workshop_How_webpage_works2.md
+++ b/(2.0)Workshop_How_webpage_works2.md
@@ -89,6 +89,9 @@ window.onload = function() {
 }
 ```
 
+```window.onload``` is fired when the entire page loads, including its content (images, CSS, scripts, etc.).
+https://developer.mozilla.org/en-US/docs/Web/API/GlobalEventHandlers/onload
+
 7. (optional, you could create your own) Download the following [favicon.ico](resources/icons/favicon.ico) to my-first-site folder
 8. Go to the `my-first-site` folder and double click the file `index.html`
 9. You should see a web page like this one:
