--- a/(2.2)JavaScript_data_type_a2.md
+++ b/(2.2)JavaScript_data_type_a2.md
@@ -149,7 +149,11 @@ let age;
 * Symbols
 
 The symbol type is used to create unique identifiers for objects. It's not commonly used and we just mention it here to show there is a symbol type in JavaScript, we will have a better understanding when we get familiar with the ```objects``` type.
-
+```js
+const symbol1 = Symbol();
+const symbol2 = Symbol(42);
+const symbol3 = Symbol('foo');
+```
 #### Practice
 
 [Exercise 1](./exercises/js/ex_1.md)
