--- a/(3.0)JavaScript_data_type_details_b6.md
+++ b/(3.0)JavaScript_data_type_details_b6.md
@@ -2,18 +2,18 @@
 # JavaScript part A (string)
 
 [<- Home](README.md)
-### String concatenation 🕙
+### String concatenation (connect 2 or more strings)
 
 - The `+` operator allows us to concat two or more strings together
 
   **Example:**
 
   ```js
-  let name = "Juan";
-  let space = " ";
-  let lastname = "Perez";
+  const name = "Juan";
+  const space = " ";
+  const lastName = "Perez";
 
-  console.log(name + space + lastname);
+  console.log(name + space + lastName);
   ```
 
 - In this example we concat all values using the `+` operator
@@ -22,16 +22,16 @@
   **Example:**
 
   ```js
-  let name = "Juan";
-  let lastname = "Perez";
+  const name = "Juan";
+  const lastName = "Perez";
 
-  console.log(name + " " + lastname);
+  console.log(name + " " + lastName);
   ```
 - In this example we see how to use a literal value without being assigned to a variable
 
 #### Practice
 
-[Exercise 12](./exercises/js/ex_12.md)
+[Exercise 12](./exercises/js/ex_12.md) 
 
 [Exercise 13](./exercises/js/ex_13.md)
 
@@ -49,8 +49,8 @@
   **Example:**
 
   ```js
-  var name = "Pedro";
-  var template = `Welcome ${name} to this great site`;
+  const name = "Pedro";
+  const template = `Welcome ${name} to this great site`;
 
   console.log(template);
   ```
@@ -60,7 +60,24 @@
 
 #### Practice
 
-[Exercise 15](./exercises/js/ex_15.md)
+[Exercise 15](./exercises/js/ex_15.md) 🕙
+<details>
+<summary><b>Exercise 15</b></summary>
+
+# Exercise 15
+
+* Create a new index15.js file
+* Define a **best student name** variable (camel case)
+* Assign the variable the class best student name (string)
+* Use console.log to show the following message: The best student is: %bestStudentName%
+* Use Template literals and interpolate the bestStudentName variable value
+
+The result should be like:
+```
+The best student is Kevin
+```
+
+</details>
 
 [Exercise 16](./exercises/js/ex_16.md)
 
@@ -75,8 +92,8 @@
   **Example:**
 
   ```js
-  let age = 38;
-  let capacity = 50;
+  const age = 38;
+  const capacity = 50;
 
   console.log(age);
   console.log(capacity);
@@ -86,6 +103,18 @@
 
 [Exercise 20](./exercises/js/ex_20.md)
 
+<details>
+<summary><b>Exercise 15</b></summary>
+
+# Exercise 20
+
+* Create a new index20.js file
+* Define a **day** variable and assign todays day number (number)
+* Define a **month** variable and assign todays month number (number) (from 1 to 12)
+* Define a **year** variable and assign todays year (number) (4 digits)
+* Use a template variable to show the date with the following format: d/m/yyyy
+</details>
+
 [Exercise 21](./exercises/js/ex_21.md)
 
 - A common mistake is to code numbers as strings
@@ -93,8 +122,8 @@
   **Example:**
 
   ```js
-  let age = 38;
-  let capacity = "50";
+  const age = 38;
+  const capacity = "50";
   ```
 
   > In this example we have two variables that it looks like we are assigning number values.
@@ -110,9 +139,9 @@
   **Example:**
 
   ```js
-  let on = true;
-  let voted = false;
-  let married = false;
+  const on = true;
+  const voted = false;
+  const married = false;
 
   console.log(on);
   console.log(voted);
@@ -134,7 +163,7 @@
   **Example:**
 
   ```js
-  let variableWithoutDefinition = undefined;
+  const variableWithoutDefinition = undefined;
 
   console.log(variableWithoutDefinition);
   ```
@@ -154,7 +183,7 @@
   **Example:**
 
   ```js
-  let nullVariable = null;
+  const nullVariable = null;
 
   console.log(nullVariable);
   ```
@@ -169,11 +198,11 @@
   **Example:**
 
   ```js
-  let name = "Marta";
-  let age = 30;
-  let married = false;
-  let undefinedVar = undefined;
-  let nullVar = null;
+  const name = "Marta";
+  const age = 30;
+  const married = false;
+  const undefinedVar = undefined;
+  const nullVar = null;
 
   console.log(typeof name); // string
   console.log(typeof age); // number
