--- a/(1.0)intro5.md
+++ b/(1.0)intro5.md
@@ -27,23 +27,26 @@ Git is a version control system that we'll use to save changes and deploy our ap
 
 ## Commonly used bash commands 🕙
 
-Bash commands is mainly used in Linux/Unix, by using git bash, we can use some the commands from Linux.🙌
-
-ls, dir
+Bash commands is mainly used in Linux/Unix, by using git bash, we can use some the commands from Linux on Windows system.🙌
+```bash
+ls
+dir
 
 pwd
 
 touch
-
 rm
 
 mkdir
 
-rmdir, rm -r folder_name
+rmdir
+rm -r folder_name
 
 cd .. 
 cd a_path
 
+clear
+```
 ## Visual Studio Code 
 
 ### Key Advantages of Visual Studio Code 
