--- a/(2.2)JavaScript_data_type_a2.md
+++ b/(2.2)JavaScript_data_type_a2.md
@@ -1,6 +1,7 @@
 # JavaScript part A (data types)
 
 [<- Home](README.md)
+
 🕙🕙
 - To execute a JS program we'll use the node command and the name of the file that we want to execute
 
@@ -156,6 +157,6 @@ const symbol3 = Symbol('foo');
 ```
 #### Practice
 
-[Exercise 1](./exercises/js/ex_1.md)
+[Exercise 1](./exercises/js/ex_1.md) (You could create a **folder** with name ```js``` to save the exercise files together)
 
-Next class we will review most of those data types and have more exercises.👍
+ℹ️Next class we will **review** most of those data types and have more exercises.👍
