--- a/(5.0)JavaScript_comparison_operators_d5-6.md
+++ b/(5.0)JavaScript_comparison_operators_d5-6.md
@@ -2,7 +2,7 @@
 
 [<- Home](README.md)
 
-Getting harder now!👷‍♂️🪨
+It's getting harder now!🪨
 ## Comparison operators
 
 ### Equality operators 🕙
@@ -21,7 +21,7 @@ Getting harder now!👷‍♂️🪨
   let secondNumber = 20;
   let thirdNumber = 10;
 
-  console.log(firstNumber == secondNumber); // true
+  console.log(firstNumber == secondNumber); // true 
   console.log(firstNumber == thirdNumber); // false
   ```
 
@@ -185,7 +185,7 @@ Getting harder now!👷‍♂️🪨
 - In this case we get **false** as both expressions are false
 - [MDN logical operators doc](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Logical_Operators)
 
-## Negation 🕙🕙
+## Negation /nɪˈɡeɪʃən/  🕙🕙
 
 - Using the not operator **!** we can negate a condition
 - If we have a **true** value and we use the not operator we get **false**
