--- a/(6.0)JavaScrpt_string_e5.md
+++ b/(6.0)JavaScrpt_string_e5.md
@@ -43,7 +43,7 @@
 
 [Exercise 39](./exercises/js/ex_39.md)
 
-## Concat🕙
+## Concat (Optional. We have learnt this in lesson 3)
 
 - Using the **+** operator we can concatenate string values
 - The String object has a **concat** method to do the same using methods instead of operators
