--- a/(7.0)JavaScript_number_if_f5.md
+++ b/(7.0)JavaScript_number_if_f5.md
@@ -4,8 +4,7 @@
 
 ## Number methods 
 
-- The Number JavaScript object is a wrapper object allowing you to work with numerical values
-- Great learning project: Find out about wrappers and why Strings are different than "primitives" in most computer languages
+- The Number type allow you to work with numerical values
 
 ### parseInt 🕙
 
