--- a/(9.0)JavaScript_while_do_while_for_h6.md
+++ b/(9.0)JavaScript_while_do_while_for_h6.md
@@ -1,4 +1,47 @@
 # JavaScript part H (Loops)
+
+#### Loops (Iterators)
+
+- It's common that when coding we need to keep repeating the same code execution until a given condition it's true
+- For example I might want to show numbers from 0 to 10 to create a list
+
+  **Example:**
+
+  ```js
+  console.log(0);
+  console.log(1);
+  console.log(2);
+  console.log(3);
+  console.log(4);
+  console.log(5);
+  console.log(6);
+  console.log(7);
+  console.log(8);
+  console.log(9);
+  console.log(10);
+  ```
+
+- This code works
+- But what about if you need to add more functionality or you need to show more numbers like to a 100 or to a 1000
+- We'll go crazy, right?
+
+  **Example:**
+
+  ```js
+  console.log("number: ", 0);
+  console.log("number: ", 1);
+  console.log("number: ", 2);
+  console.log("number: ", 3);
+  console.log("number: ", 4);
+  console.log("number: ", 5);
+  console.log("number: ", 6);
+  console.log("number: ", 7);
+  console.log("number: ", 8);
+  console.log("number: ", 9);
+  console.log("number: ", 10);
+  ```
+
+- Thanks we can use iteration to solve this problem
 ### While🕙🕙
 
 - The **while statement** creates a loop that executes a specified statement as long as the test condition evaluates to true
@@ -104,7 +147,7 @@
 
 [Exercise 67](./exercises/js/ex_67.md)
 
-[Exercise 68](./exercises/js/ex_68.md)
+[Exercise 68](./exercises/js/ex_68.md)👈 even number
 
 [Exercise 69](./exercises/js/ex_69.md)
 
@@ -181,9 +224,9 @@
 
 #### Practice
 
-[Exercise 76](./exercises/js/ex_76.md)
+[Exercise 76](./exercises/js/ex_76.md) 👈 (do while)
 
-[Exercise 77](./exercises/js/ex_77.md)
+[Exercise 77](./exercises/js/ex_77.md)  
 
 [Exercise 78](./exercises/js/ex_78.md)
 
