--- a/exercises/js/ex_137.md
+++ b/exercises/js/ex_137.md
@@ -1,7 +1,7 @@
 # Exercise 137
 
 * Create a new index137.js file
-* Define a numbers array with values between 1 and 1000
+* Define a numbers array with some values between 1 and 1000, such as ``` 1, 3, 5 ,7 , 11, 13, 17, 19, 23```
 * Iterate over each numbers item using `map` and `increment` the value in 10
 ```
 If value is 1 then it should be 11
