--- a/(8.0)JavaScript_conditional_g.md
+++ b/(8.0)JavaScript_conditional_g.md
@@ -1,7 +1,7 @@
 # JavaScript part G (Conditional)
 
 [<- Home](README.md)
-### Conditional ternary operator 🕙
+### Conditional ternary<sup>['tә:nәri]</sup> operator 🕙 (Optional, you could always use if instead)
 
 - The conditional **ternary operator** is the only JavaScript operator that takes three operands
 - This operator is frequently used as a shortcut for the if statement
@@ -240,45 +240,3 @@
 
 [Exercise 65](./exercises/js/ex_65.md)
 
-#### Iterators 🕙
-
-- It's common that when coding we need to keep repeating the same code execution until a given condition it's true
-- For example I might want to show numbers from 0 to 10 to create a list
-
-  **Example:**
-
-  ```js
-  console.log(0);
-  console.log(1);
-  console.log(2);
-  console.log(3);
-  console.log(4);
-  console.log(5);
-  console.log(6);
-  console.log(7);
-  console.log(8);
-  console.log(9);
-  console.log(10);
-  ```
-
-- This code works
-- But what about if you need to add more functionality or you need to show more numbers like to a 100 or to a 1000
-- We'll go crazy, right?
-
-  **Example:**
-
-  ```js
-  console.log("number: ", 0);
-  console.log("number: ", 1);
-  console.log("number: ", 2);
-  console.log("number: ", 3);
-  console.log("number: ", 4);
-  console.log("number: ", 5);
-  console.log("number: ", 6);
-  console.log("number: ", 7);
-  console.log("number: ", 8);
-  console.log("number: ", 9);
-  console.log("number: ", 10);
-  ```
-
-- Thanks we can use iteration to solve this problem
