--- a/exercises/js/ex_102.md
+++ b/exercises/js/ex_102.md
@@ -4,8 +4,7 @@
 * Define a showName variable and assign a function as value
 * When the showName function get executed it will print your name with the following output format:
 ```
-===========
 = Nicolás =
-===========
+
 ```
-* Call the showName at least 2 times
+* Call the showName at least 2 times with different names, e.g. ```Tom``` and ```Jerry```
