--- a/exercises/js/ex_105.md
+++ b/exercises/js/ex_105.md
@@ -2,6 +2,6 @@
 
 * Create a new index105.js file
 * Define a meaningOfLife function
-* The meaningOfLife returns the number 42
-* Show the following message as output: The meaning of life is: %meaningOfLife% (use a template)
-* In this exercise you need to call the meaningOfLife() function inside the template placeholder
+* The meaningOfLife function returns the number 42
+* Show the following message as output: The meaning of life is: 42
+* In this exercise you need to call the meaningOfLife() function
