--- a/(1.2)JavaScript_data_type_a2.md
+++ b/(1.2)JavaScript_data_type_a2.md
@@ -147,7 +147,7 @@ let age;
      c : 'c',
  }
 ```
-* Symbols
+* Symbols (⚠️Warning, we perhaps will not use this in our lessons)
 
 The symbol type is used to create unique identifiers for objects. It's not commonly used and we just mention it here to show there is a symbol type in JavaScript, we will have a better understanding when we get familiar with the ```objects``` type.
 ```js
