--- a/(0.0)intro6.md
+++ b/(0.0)intro6.md
@@ -1,3 +1,95 @@
+
+[<- Home](README.md)
+# Introduction to Development
+
+## Discord
+
+Join our discord server😊
+
+
+## Computer program🕙
+
+A computer program is a sequence of instructions in a programming language that a computer can execute or interpret.
+
+### Our first line of code in JavaScript in the browser:
+The console.log() method outputs a message to the web console. The message may be a single string (with optional substitution values), or it may be any one or more JavaScript objects.
+```console.log('hello world')```
+
+https://developer.mozilla.org/en-US/docs/Web/API/console/log
+## Installing Git 🕙
+
+Git is a version control system that we'll use to save changes and deploy our app. We need to install Git!
+
+1. Visit the URL https://git-scm.com/. Click "Download for Windows" and choose the 64-bit version. ![Download Git](resources/images/intro/git.png)
+2. Select your operating system. (Windows 10/11 suggessted)
+3. Follow the prompts to install Git!
+4. If Git asks you which default editor to use, we recommend Visual Studio Code!
+
+## Commonly used bash commands 🕙
+
+Bash commands is mainly used in Linux/Unix, by using git bash, we can use some the commands from Linux on Windows system.🙌
+```bash
+ls
+dir
+
+pwd
+
+touch
+rm
+
+mkdir
+
+rmdir
+rm -r folder_name
+
+cd .. 
+cd a_path
+
+clear
+```
+## Visual Studio Code 
+
+### Key Advantages of Visual Studio Code 
+
+Visual Studio Code is a simple, code-centric integrated development environment (IDE).
+
+- Available for Mac, Linux, and Windows
+- Key features include debugging, version control with Git, and intelligent code completion
+- Supports 36 programming languages and offers customized tools and plug-ins to make your dev environment your own!
+
+### Download Visual Studio Code 🕙
+
+1. Go to [Visual Studio Code](https://code.visualstudio.com/)
+2. Click the big **"Download for xxx"** button ![VS Code download](/resources/images/intro/vs-code1.png) _If you're having trouble, scroll to the bottom of the page and manually select the correct package for your system_ ![VS Code alternative download](/resources/images/intro/vs-code2.png)
+
+3. Open the VSCode .zip file after it has finished downloading to set up Visual Studio Code. Your browser may let you open the file directly from the download page... ![VS Code extract](/resources/images/intro/vs-code3.png) ...or you may have to open your Downloads folder and select the .zip file: ![VS Code extract from folder](/resources/images/intro/vs-code4.png)
+
+## What's Web Development?
+
+Refers to all the activities related to building, creating and maintaining websites. It includes aspects such as web design, web publishing, web programming and databases management
+
+### Front End, or Client-Side: 🕙
+
+- Directly user-interactive website parts
+- Technologies
+  - HTML: Content
+  - CSS: Layout
+  - Javascript: Interaction
+
+Any website, such as google.ca etc, which can be access by our browsers such as Chrome or Firefox
+
+### Back End, or Server-Side:
+
+- User-hidden functionality.
+- Basically any language, but mostly **Node.js**, Python, Go, C#, Ruby etc
+
+_NOTE: **Full Stack developer**: Someone who is familiar with both kinds of development, and can work on a website from start to finish!_
+
+![User's interaction with the Internet](/resources/images/internet/browser1.png)
+
+
+## Next, Let's learn more about the internet
+
 # Internet
 
 [<- Home](README.md)
@@ -69,3 +161,5 @@ Earlier we used the term "packets" to describe the format in which the data is s
 
 ## Let's create our first site
 * [<- Introduction to Development]((1)intro5.md) - [Our First Site ->]((3)first-site.md) 
+
+- [<- Home](README.md)
