--- a/(1.1)Install_node1-2.md
+++ b/(1.1)Install_node1-2.md
@@ -2,6 +2,8 @@
 
 [<- Home](README.md)
 
+ℹ️Before we start we will review the "Webpage" workshop
+
 ## Definition
 
 > JavaScript often abbreviated as JS, is a `high-level`, `interpreted` programming language. It is a language which is also characterized as `dynamic`, > `weakly typed`, `prototype-based` and `multi-paradigm`.
@@ -51,7 +53,7 @@ console.log(2 + 2);
 console.log("Congrats!!!, you just ran some JS code");
 ```
 
-### Node.js - Server Side
+### Node.js - Server Side 🕙
 
 - [Node.js®](https://nodejs.org/) is a JavaScript runtime built on Chrome's V8 JavaScript engine. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient. Node.js' package ecosystem, npm, is the largest ecosystem of open source libraries in the world.
 - It was created by [Ryan Dahl](https://wikipedia.org/wiki/Node.js) in 2009
