--- a/(1.2)JavaScript_data_type_a2.md
+++ b/(1.2)JavaScript_data_type_a2.md
@@ -61,18 +61,18 @@ node index.js
 - If we use names like a, b, foo they don't add any context about what we're coding
 - We can then define that variables are named memory positions where we can assign different values and override them when needed
 
-Nowadays, we use ```const``` , ```let``` to define a variable; However, you could see the that some code were written with ```var```, which is similar to ```let```.
+Nowadays, we use ```const``` , ```let``` to define a variable; However, you could see the that some old code were written with ```var```, which is similar to ```let```.
 
-```bash
-const a = 1;
+```js
+const a = 1; // define a value that will not change
 ```
 
-```bash
-let b = 'let it be';
+```js
+let b = 'let it be'; // define a value that can be changed
 ```
 
-```bash
-var c = "I'm old"
+```js
+var c = "I'm old-fashioned" // we don't use var in our class
 ```
 
 ## Data types in JavsScript
