--- a/(0.0)intro6.md
+++ b/(0.0)intro6.md
@@ -2,6 +2,10 @@
 [<- Home](README.md)
 # Introduction to Development
 
+## What will we learn
+
+We will mainly learn about JavaScript. We will also lean knowledge of HTML and CSS.
+Of course, we are going to try to write a few simple games that using JS.
 ## Discord
 
 Join our discord server😊
