--- a/(0.1)👷Workshop_How_webpage_works1(20).md
+++ b/(0.1)👷Workshop_How_webpage_works1(20).md
@@ -14,7 +14,7 @@ Follow the next steps to create your first site! These steps are fast pace but f
 ![open Visual Studio Code](resources/images/open_folder_2.png)
 5. Create the following files inside the `my-first-site` folder :
   * index.html
-  * styles.css
+  * style.css
   * script.js
 ![open Visual Studio Code](resources/images/create_files.png)
 6. Copy and Paste the following code on each document
