--- a/exercises/js/ex_15.md
+++ b/exercises/js/ex_15.md
@@ -4,4 +4,4 @@
 * Define a **best student name** variable (camel case)
 * Assign the variable the class best student name (string)
 * Use console.log to show the following message: The best class student is: %bestStudentName%
-* Use Template literals and interpolate the bestStudentName variable value
+* (optional)Use Template literals and interpolate the bestStudentName variable value
